--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "1.0.0",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html",
+    "dev": "netlify dev"
   },
   "author": "Daniel Borsheim",
   "license": "ISC",
   "devDependencies": {
-    "parcel": "^2.15.4",
-    "dotenv": "^17.2.1"
+    "dotenv": "^17.2.1",
+    "parcel": "^2.15.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "axios": "^1.12.2"
+  }
 }
